--- a/_posts/0000-01-02-Mattmn.md
+++ b/_posts/0000-01-02-Mattmn.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to Mattmn slide!"
 ---
 This is Matmn's slide
 Use the left arrow to go back!
