--- a/_posts/0000-01-02-Mattmn.md
+++ b/_posts/0000-01-02-Mattmn.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to Mattmn slide!"
 ---
-This is Matmn's slide
+This is my awesome slide
 Use the left arrow to go back!
